--- a/numerical/CMakeLists.txt
+++ b/numerical/CMakeLists.txt
@@ -1,23 +1,29 @@
-add_library(const constants/phys_consts.F90)
-target_include_directories(const INTERFACE ${CMAKE_CURRENT_BINARY_DIR})
+add_library(const OBJECT constants/phys_consts.F90)
 target_compile_definitions(const PRIVATE REALBITS=${realbits})
 
 add_subdirectory(interpolation)
 
-add_library(mpimod mpimod/mpimod.F90 mpimod/mpisend.f90 mpimod/mpirecv.f90 mpimod/mpihalo.f90)
+add_library(mpimod OBJECT mpimod/mpimod.F90 mpimod/mpisend.f90 mpimod/mpirecv.f90 mpimod/mpihalo.f90)
 target_link_libraries(mpimod PRIVATE const MPI::MPI_Fortran)
 target_compile_definitions(mpimod PRIVATE REALBITS=${realbits})
 
 add_subdirectory(grid)
 
-add_library(calculus calculus/calculus.f90 calculus/gradient.f90 calculus/integral.f90 calculus/div.f90)
+add_library(calculus OBJECT calculus/calculus.f90 calculus/gradient.f90 calculus/integral.f90 calculus/div.f90)
 target_link_libraries(calculus PRIVATE mesh)
 
 add_subdirectory(diffusion)
 
 # -- more libs
 
-add_library(advec advection/advec_mpi.f90)
+add_library(advec OBJECT advection/advec_mpi.f90)
 target_link_libraries(advec PRIVATE const mpimod grid mesh)
 
 add_subdirectory(potential)
+
+
+foreach(t advec calculus const diffusion grid interp mesh mpimod mumps_interface PDEelliptic PDEparabolic potential)
+  target_include_directories(${t} INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
+  set_target_properties(${t} PROPERTIES
+    Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
+endforeach()
