--- a/numerical/diffusion/CMakeLists.txt
+++ b/numerical/diffusion/CMakeLists.txt
@@ -1,19 +1,12 @@
-add_library(PDEparabolic PDEparabolic.f90)
+add_library(PDEparabolic OBJECT PDEparabolic.f90)
 target_link_libraries(PDEparabolic PRIVATE const ${LAPACK_LIBRARIES})
-target_include_directories(PDEparabolic
-  PRIVATE ${LAPACK_INCLUDE_DIRS}
-  INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
-set_target_properties(PDEparabolic PROPERTIES
-  Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
+target_include_directories(PDEparabolic PRIVATE ${LAPACK_INCLUDE_DIRS})
 if(NOT LAPACK_LAPACK95_FOUND)
   target_sources(PDEparabolic PRIVATE ${CMAKE_SOURCE_DIR}/vendor/lapack95/gbsv.f90)
 endif()
 
-add_library(diffusion diffusion.f90)
+add_library(diffusion OBJECT diffusion.f90)
 target_link_libraries(diffusion PRIVATE const grid mesh PDEparabolic)
-target_include_directories(diffusion INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
-set_target_properties(diffusion PROPERTIES
-  Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
 
 if(NOT hdf5)
   return()
