--- a/temporal/CMakeLists.txt
+++ b/temporal/CMakeLists.txt
@@ -1,14 +1,8 @@
-add_library(temporal temporal.f90)
+add_library(temporal OBJECT temporal.f90)
 target_link_libraries(temporal PRIVATE const mesh mpimod MPI::MPI_Fortran)
-target_include_directories(temporal INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
-set_target_properties(temporal PROPERTIES
-  Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
 
-add_library(timeutils timeutils.f90)
+add_library(timeutils OBJECT timeutils.f90)
 target_link_libraries(timeutils PRIVATE const)
-target_include_directories(timeutils INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/include)
-set_target_properties(timeutils PROPERTIES
-  Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
 
 # -- optional tests
 
