--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -8,36 +8,74 @@ on:
       - "**.f90"
       - "**.F90"
       - "**.cmake"
-      - "**.build"
-      - "**.txt"
+      - "**/CMakeLists.txt"
       - ".github/workflows/ci_linux.yml"
   pull_request:
     paths:
       - "**.f90"
       - "**.F90"
       - "**.cmake"
-      - "**.build"
-      - "**.txt"
+      - "**/CMakeLists.txt"
       - ".github/workflows/ci_linux.yml"
 
 jobs:
 
-  cmakeBuildAllLibs:
+  cmake:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
         python-version: '3.7'
-    - run: python3 -m pip install -e .[tests]
+    - run: |
+        pip install -e .
+        pip install cmake
+    - name: Install packages
+      run: |
+        sudo apt update -yq
+        sudo apt install -yq --no-install-recommends pkg-config gfortran libopenmpi-dev openmpi-bin liblapack-dev libscalapack-openmpi-dev libmumps-dev
+
+    - name: CMake configure
+      run: cmake -B build -Dhdf5=true
+      env:
+        FC: gfortran
+    - run: cmake --build build --parallel
+    - uses: actions/upload-artifact@v1
+      if: failure()
+      with:
+        name: Linux_Cmake_Buildlog
+        path: build/CMakeFiles/CMakeError.log
+# CI is too slow for 3d_glow
+
+# -V output truncated on CI?
+    - run: ctest --parallel --output-on-failure -E 3d
+      working-directory: build
+    - uses: actions/upload-artifact@v1
+      if: failure()
+      with:
+        name: Linux_CMake_Testlog
+        path: build/Testing/Temporary/LastTest.log
+
+
+  cmakeBuildAllLibs:
+    if: false
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.7'
+    - run: |
+        pip install -e .
+        pip install cmake
     - name: Install packages
       run: |
         sudo apt update -yq
         sudo apt install -yq --no-install-recommends pkg-config gfortran libopenmpi-dev openmpi-bin
-        pip install cmake
+
 
     - name: CMake configure
-      run: cmake -B build -Dhdf5=false
+      run: cmake -B build -Dhdf5=true
       env:
         FC: gfortran
     - run: cmake --build build --parallel
@@ -58,9 +96,10 @@ jobs:
         path: build/Testing/Temporary/LastTest.log
 
   mesonHDF5:
+    if: false
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
         python-version: '3.7'
