--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -42,7 +42,9 @@ jobs:
         path: build/CMakeFiles/CMakeError.log
 
 # CI is too slow for 3d_glow
-    - run: ctest --parallel -E 3d --output-on-failure
+    - run: ctest --parallel --output-on-failure -R unit
+      working-directory: build
+    - run: ctest --parallel --output-on-failure -R gemini:2d_fang
       working-directory: build
     - uses: actions/upload-artifact@v1
       if: failure()
