--- a/.github/workflows/ci_debug_build.yml
+++ b/.github/workflows/ci_debug_build.yml
@@ -41,7 +41,9 @@ jobs:
         name: Linux_CMake_DebugBuildlog
         path: build/CMakeFiles/CMakeError.log
 
-    - run: ctest --parallel -E 3d --output-on-failure
+    - run: ctest --parallel --output-on-failure -R unit
+      working-directory: build
+    - run: ctest --parallel --output-on-failure -R gemini:2d_fang
       working-directory: build
     - uses: actions/upload-artifact@v1
       if: failure()
