--- a/numerical/diffusion/CMakeLists.txt
+++ b/numerical/diffusion/CMakeLists.txt
@@ -22,26 +22,26 @@ target_link_libraries(test_diffusion1d PRIVATE PDEparabolic const
   ${LAPACK_LIBRARIES} h5fortran::h5fortran)
 
 # WORKING_DIRECTORY is needed to write output file to repeatable path.
-add_test(NAME diffusion1d COMMAND $<TARGET_FILE:test_diffusion1d>
+add_test(NAME unit:diffusion1d COMMAND $<TARGET_FILE:test_diffusion1d>
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
-set_tests_properties(diffusion1d PROPERTIES
+set_tests_properties(unit:diffusion1d PROPERTIES
   TIMEOUT 5
   FIXTURES_SETUP GemDiff)
 
 
 if(OctaveOK)
-add_test(NAME diffusion1d_octave
+add_test(NAME unit:diffusion1d:octave
   COMMAND ${Octave_EXECUTABLE} -q --eval "test_diffusion1D('${_tmpdifffn}')"
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-set_tests_properties(diffusion1d_octave PROPERTIES
+set_tests_properties(unit:diffusion1d:octave PROPERTIES
   TIMEOUT 10
   FIXTURES_REQUIRED GemDiff)
 endif(OctaveOK)
 
 if(PythonOK)
-add_test(NAME diffusion1d_python
+add_test(NAME unit:diffusion1d:python
   COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_diffusion1D.py ${_tmpdifffn})
-set_tests_properties(diffusion1d_python PROPERTIES
+set_tests_properties(unit:diffusion1d:python PROPERTIES
   TIMEOUT 10
   FIXTURES_REQUIRED GemDiff)
 endif(PythonOK)
