--- a/numerical/potential/CMakeLists.txt
+++ b/numerical/potential/CMakeLists.txt
@@ -9,7 +9,10 @@ target_link_libraries(mumps_interface PUBLIC ${MUMPS_LIBRARIES})
 add_library(PDEelliptic OBJECT PDEelliptic.f90 elliptic2d.f90 elliptic3d.f90)
 target_link_libraries(PDEelliptic PUBLIC const mumps_interface MPI::MPI_Fortran)
 
-add_library(potential OBJECT potential_comm_mumps.f90 potential_mumps.f90 boundary_conditions/potentialBCs_mumps.f90)
+add_library(potential OBJECT
+potential_comm_mumps.f90 potential_root.f90 potential_worker.f90
+potential_mumps.f90 potential2d.f90
+boundary_conditions/potentialBCs_mumps.f90)
 target_link_libraries(potential PUBLIC calculus collision const grid mesh interp timeutils PDEelliptic mpimod reader MPI::MPI_Fortran)
 
 if(NOT hdf5)
