--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,5 +30,6 @@ WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 set_tests_properties(unit:mumps_basic PROPERTIES
 TIMEOUT 15
 DEPENDS MPIexist
+PROCESSORS 2
 RUN_SERIAL true
 FIXTURES_SETUP MPIMUMPS)
