--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ endif()
 
 option(autobuild "autobuild missing Lapack, Scalapack or Mumps" ON)
 option(glow "use NCAR GLOW instead of Fang" ON)
-option(matlab "enable Matlab tests, which are slow and duplicate fast Octave tests" OFF)
+option(matlab "enable Matlab tests, which are slow and duplicate fast Octave tests")
 option(hdf5 "use HDF5 file I/O" on)
 option(netcdf "use NetCDF file I/O" off)
 option(metis "use METIS" OFF)
