cmake>=3.15 required for more robust python finding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
-cmake_minimum_required(VERSION 3.14)  # 3.12 for find_ROOT, 3.13 for a lot of user functions, 3.14 for check_fortran_source_runs & fetchcontent
+cmake_minimum_required(VERSION 3.15)
+# 3.12 for find_ROOT, 3.13 for a lot of user functions, 3.14 for check_fortran_source_runs & fetchcontent
+# 3.15 for robust Python finding
 
 if(CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
   message(FATAL_ERROR "use cmake -B build or similar to avoid building in-source, which is messy")
@@ -12,7 +14,7 @@ project(gemini3d
   LANGUAGES C Fortran  # MUST include C language for Intel / MKL to work
   DESCRIPTION "3-D ionospheric model"
   HOMEPAGE_URL https://github.com/gemini3d/gemini
-  VERSION 0.2.0)
+  VERSION 0.3.0)
 
 enable_testing()
 
@@ -35,7 +37,7 @@ option(scotch "use Scotch" OFF)
 option(openmp "Use OpenMP when building MUMPS" OFF)
 
 if(netcdf AND hdf5)
-  message(FATAL_ERROR "HDF5 and NetCDF are currently mutually exclusive (this is a planned feature)")
+  message(FATAL_ERROR "HDF5 and NetCDF together is a planned feature")
 endif()
 
 set(FETCHCONTENT_UPDATES_DISCONNECTED off)
