--- a/numerical/potential/CMakeLists.txt
+++ b/numerical/potential/CMakeLists.txt
@@ -24,24 +24,25 @@ endif()
 set(_potential_testfile ${CMAKE_CURRENT_BINARY_DIR}/test_potential2d.h5)
 add_executable(test_potential2d test_potential2D.f90)
 target_link_libraries(test_potential2d const PDEelliptic MPI::MPI_Fortran h5fortran)
-add_test(NAME unit:potential2d COMMAND test_potential2d WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
-set_tests_properties(unit:potential2d PROPERTIES TIMEOUT 30
-                     FIXTURES_SETUP GemPot)
+add_test(NAME unit:potential2 COMMAND test_potential2d WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+set_tests_properties(unit:potential2 PROPERTIES TIMEOUT 30
+  FIXTURES_SETUP GemPot)
+win32_env(unit:potential2)
 
 if(OctaveOK)
-add_test(NAME unit:potential2d_octave
+add_test(NAME unit:potential2_octave
   COMMAND ${Octave_EXECUTABLE} -q --eval "test_potential2D('${_potential_testfile}')"
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-set_tests_properties(unit:potential2d_octave PROPERTIES
+set_tests_properties(unit:potential2_octave PROPERTIES
   REQUIRED_FILES ${_potential_testfile}
   TIMEOUT 15
   FIXTURES_REQUIRED GemPot)
 endif(OctaveOK)
 
 if(PythonOK)
-add_test(NAME unit:potential2d_python
+add_test(NAME unit:potential2_python
   COMMAND ${Python3_EXECUTABLE}  ${CMAKE_CURRENT_SOURCE_DIR}/test_potential2d.py ${_potential_testfile})
-set_tests_properties(unit:potential2d_python PROPERTIES
+set_tests_properties(unit:potential2_python PROPERTIES
   REQUIRED_FILES ${_potential_testfile}
   TIMEOUT 10
   FIXTURES_REQUIRED GemPot)
