ci: streamline and use Ninja + Cmake on Linux

--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -3,17 +3,14 @@ env:
   CI: true
 
 on:
+  release:
   push:
     paths:
-      - "**.f90"
-      - "**.F90"
       - "**.cmake"
       - "**/CMakeLists.txt"
       - ".github/workflows/ci_macos.yml"
   pull_request:
     paths:
-      - "**.f90"
-      - "**.F90"
       - "**.cmake"
       - "**/CMakeLists.txt"
       - ".github/workflows/ci_macos.yml"
