--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -34,15 +34,13 @@ jobs:
       run: |
         sudo apt update -yq
         sudo apt install -yq --no-install-recommends pkg-config gfortran libopenmpi-dev openmpi-bin liblapack-dev libscalapack-openmpi-dev libmumps-dev libhdf5-dev
-    # - name: Install Ninja
-    #   run: |
-    #     wget https://github.com/ninja-build/ninja/releases/download/v1.10.0/ninja-linux.zip
-    #     mkdir ~/bin
-    #     unzip ninja-linux.zip -d ~/bin
-    #     export PATH=$HOME/bin:$PATH
+    - name: Install Ninja
+      run: |
+        wget https://github.com/ninja-build/ninja/releases/download/v1.10.0/ninja-linux.zip
+        unzip ninja-linux.zip
 
     - name: CMake configure
-      run: cmake -B build -Dhdf5=true
+      run: cmake -G Ninja -DCMAKE_MAKE_PROGRAM=./ninja -B build -Dhdf5=true
       env:
         FC: gfortran
     - run: cmake --build build --parallel
