--- a/.github/workflows/ci_debug_build.yml
+++ b/.github/workflows/ci_debug_build.yml
@@ -22,16 +22,20 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v1
       with:
-        python-version: '3.7'
+        python-version: '3.6'
     - run: |
         pip install -e .
         pip install cmake
+    - name: Install Ninja
+      run: |
+        wget https://github.com/ninja-build/ninja/releases/download/v1.10.0/ninja-linux.zip
+        unzip ninja-linux.zip
     - name: Install prereqs
       run: |
         sudo apt update -yq
         sudo apt install -yq --no-install-recommends gfortran liblapack-dev libscalapack-openmpi-dev libmumps-dev libopenmpi-dev openmpi-bin libhdf5-dev
 
-    - run: cmake -B build -DCMAKE_BUILD_TYPE=Debug -Dhdf5=true
+    - run: cmake -B build -DCMAKE_BUILD_TYPE=Debug -G Ninja -DCMAKE_MAKE_PROGRAM=$(realpath ./ninja) -Dhdf5=true
       env:
         FC: gfortran
     - run: cmake --build build
