--- a/.github/workflows/ci_rawio.yml
+++ b/.github/workflows/ci_rawio.yml
@@ -5,6 +5,14 @@ env:
   CI: true
 
 on:
+  push:
+    paths:
+    - "**/*.cmake"
+    - ".github/workflows/ci_rawio.yml"
+  pull_request:
+    paths:
+    - "**/*.cmake"
+    - ".github/workflows/ci_rawio.yml"
   release:
 
 jobs:
@@ -20,7 +28,7 @@ jobs:
     - name: Install packages
       run: |
         sudo apt update -yq
-        sudo apt install -yq --no-install-recommends gfortran libopenmpi-dev openmpi-bin liblapack-dev libscalapack-mpi-dev libmumps-dev libpthread-stubs0-dev
+        sudo apt install -yq --no-install-recommends gfortran libopenmpi-dev openmpi-bin liblapack-dev libscalapack-mpi-dev libmumps-dev libpthread-stubs0-dev octave
         pip install cmake
 
     - name: CMake configure
@@ -36,7 +44,9 @@ jobs:
         path: build/CMakeFiles/CMakeError.log
 
 # -V output truncated on CI?
-    - run: ctest --parallel --output-on-failure
+    - run: ctest --output-on-failure -R 2d
+      working-directory: build
+    - run: ctest --output-on-failure -R 3d_fang
       working-directory: build
     - uses: actions/upload-artifact@v1
       if: failure()
