python: update file locations

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = gemini
-version = 0.1.0
+version = 0.3.0
 author = Michael Hirsch, Ph.D.
 author_email = scivision@users.noreply.github.com
 description = 3-D ionospheric model plotting suite
@@ -30,7 +30,8 @@ python_requires = >= 3.6
 zip_safe = False
 packages = find:
 scripts =
-  tests/compare_all.py
+  script_utils/compare_all.py
+  job.py
 install_requires =
   numpy >= 1.16.0
   h5py
