--- a/setup.cfg
+++ b/setup.cfg
@@ -49,3 +49,44 @@ all =
   xarray
   scipy
   matplotlib >= 3.1
+
+[flake8]
+max-line-length = 132
+exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/,subprojects/
+per-file-ignores =
+    __init__.py:F401
+
+[mypy]
+ignore_missing_imports = True
+strict_optional = False
+allow_redefinition = True
+show_error_context = False
+show_column_numbers = True
+
+[tool:pytest]
+minversion = 3.9
+addopts = -ra -v
+norecursedirs = subprojects archive .* build dist CVS _darcs {arch} *.egg venv
+
+[coverage:run]
+cover_pylib = false
+omit =
+  /home/travis/virtualenv/*
+  */site-packages/*
+  */bin/*
+
+[coverage:report]
+exclude_lines =
+  pragma: no cover
+  def __repr__
+  except RuntimeError
+  except NotImplementedError
+  except ImportError
+  except FileNotFoundError
+  except CalledProcessError
+  raise AssertionError
+  raise NotImplementedError
+  logging.warning
+  logging.error
+  logging.critical
+  if __name__ == .__main__.:
